# gnome-todo

./: .gitignore  .gitmodules  Makefile.am  NEWS  configure  configure.ac  configure_meson  meson.build  meson_options.txt  org.gnome.Todo.json
data/: Makefile.am
data/appdata/: org.gnome.Todo.appdata.xml.in
data/icons/: Makefile.am
data/theme/: Adwaita.css
data/ui/: dnd-row.ui  edit-pane.ui  initial-setup.ui  list-view.ui  new-task-row.ui  task-row.ui
doc/reference/: Makefile.am  meson.build
plugins/: Makefile.am  meson.build
plugins/background/: Makefile.am  gtd-plugin-background.h  meson.build
plugins/dark-theme/: Makefile.am  gtd-plugin-dark-theme.h
plugins/eds/: Makefile.am  gtd-plugin-eds.h  gtd-provider-eds.c  gtd-provider-eds.h  gtd-provider-goa.c  gtd-provider-goa.h  gtd-provider-local.c  gtd-provider-local.h  gtd-task-eds.c  gtd-task-eds.h  gtd-task-list-eds.c  gtd-task-list-eds.h  meson.build
plugins/scheduled-panel/: Makefile.am  gtd-panel-scheduled.c  gtd-plugin-scheduled-panel.h  meson.build
plugins/score/: Makefile.am
plugins/taskwarrior/: meson.build  taskwarrior.plugin.in
plugins/taskwarrior/taskwarrior/: __init__.py
plugins/today-panel/: Makefile.am  gtd-panel-today.c  gtd-plugin-today-panel.h  meson.build
plugins/todo-txt/: Makefile.am  gtd-plugin-todo-txt.c  gtd-plugin-todo-txt.h  gtd-provider-todo-txt.c  gtd-provider-todo-txt.h  gtd-todo-txt-parser.c  gtd-todo-txt-parser.h  meson.build
plugins/todoist/: Makefile.am  gtd-plugin-todoist.h  gtd-provider-todoist.c  gtd-provider-todoist.h  gtd-todoist-preferences-panel.c  gtd-todoist-preferences-panel.h  meson.build
plugins/unscheduled-panel/: Makefile.am
po/: LINGUAS  be.po  ca.po  cs.po  da.po  de.po  en_GB.po  es.po  eu.po  fi.po  fur.po  gl.po  hu.po  id.po  is.po  it.po  kk.po  ko.po  lt.po  lv.po  ne.po  nl.po  oc.po  pa.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  vi.po  zh_TW.po
src/: Makefile.am  gnome-todo.h  gtd-application.c  gtd-dnd-row.c  gtd-edit-pane.c  gtd-edit-pane.h  gtd-empty-list-widget.c  gtd-new-task-row.c  gtd-task-list-view.c  gtd-task-list.c  gtd-task-list.h  gtd-task-row.c  gtd-task.c  gtd-task.h  gtd-window.c  main.c  meson.build
src/engine/: gtd-manager.c  gtd-plugin-manager.c
src/interfaces/: gtd-provider.c  gtd-provider.h
src/provider/: gtd-provider-popover.c
src/views/: gtd-list-selector-panel.c
